<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
	tools:context="com.example.cocktailapp.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
		android:id="@+id/signin_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/activity_sign_up_prompt_username"/>
        </android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<AutoCompleteTextView
				android:id="@+id/email"
				style="@style/Widget.AppCompat.AutoCompleteTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:hint="@string/activity_sign_up_prompt_email"
				android:inputType="textEmailAddress"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:textColor="#000000"
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/activity_sign_up_prompt_password"
				android:imeActionId="@+id/login"
				android:imeActionLabel="@string/activity_sign_up_action_sign_up_short"
				android:imeOptions="actionUnspecified"
				android:inputType="textPassword"
				android:maxLines="1"/>

		</android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="#000000"
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_sign_up_prompt_confirm_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/activity_sign_up_action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

	</LinearLayout>
</LinearLayout>
